# EGRSS

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
doc/: CMakeLists.txt
examples/c/: CMakeLists.txt  ssregr.c
examples/julia/: Smoothing spline regression.ipynb
src/core/: CMakeLists.txt  dgemv.c  dpotrf.c  dsplkgr.c  dsymv.c  dtrmv.c  dtrnrms.c  dtrsv.c  egrss.h  err_param.c
src/julia/: egrss.jl
src/julia/test/: runtests.jl  test_bigfloat.jl  test_full.jl  test_full_tril.jl  test_gemv.jl  test_generators.jl  test_ldl.jl  test_potrf.jl  test_rational.jl  test_symv.jl  test_trmv.jl  test_trnrms.jl  test_trsv.jl  test_trtri.jl
src/matlab/common/: egrss_full.m  egrss_full_tril.m  egrss_ldl.m  egrss_trace.m  egrss_trtri.m  egrss_trtri2.m
src/matlab/mex/: CMakeLists.txt  gemv.c  gemv.txt  generators.c  generators.txt  potrf.c  potrf.txt  symv.c  symv.txt  trmv.c  trmv.txt  trnrms.c  trnrms.txt  trsv.c  trsv.txt
src/matlab/ref/: CMakeLists.txt  egrss_gemv.m  egrss_generators.m  egrss_potrf.m  egrss_symv.m  egrss_trmv.m  egrss_trnrms.m  egrss_trsv.m
src/python/: LICENSE  setup.cfg
src/python/egrss/: __init__.py  base.py
src/python/tests/: test_egrss.py
tests/: CMakeLists.txt  test_dpotrf.c  test_dsplkgr.c
tests/matlab/: CMakeLists.txt  egrss_test.m
