find_package(Doxygen OPTIONAL_COMPONENTS dot)
if (DOXYGEN_FOUND)
  set(DOXYGEN_GENERATE_HTML YES)
  set(DOXYGEN_GENERATE_MAN YES)
  set(DOXYGEN_FULL_PATH_NAMES NO)
  set(DOXYGEN_USE_MATHJAX YES)
  set(DOXYGEN_USE_MDFILE_AS_MAINPAGE README.md)
  doxygen_add_docs(core_doc ${CMAKE_SOURCE_DIR}/src/core ${CMAKE_SOURCE_DIR}/README.md ALL)
else (DOXYGEN_FOUND)
  message(FATAL_ERROR "Doxygen must be installed to generate the documentation")
endif (DOXYGEN_FOUND)
