[metadata]
name = egrss
version = attr: egrss._version.__version__
description = Computational methods for extended generator representable p-semiseparable matrices
author = Martin S. Andersen and Katrine Bangsgaard Ottesen
maintainer_email = martin.skovgaard.andersen@gmail.com
license = BSD 2-Clause License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License

[options]
packages = egrss
zip_safe = False
install_requires =
  numpy
